--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <p id="guesses"></p>
     <button id="reset" class="button">Reset</button>
   </div>
-  <script src='bundle.js'></script>
+  <script src='scripts/bundle.js'></script>
 
 </body>
 
